--- a/entry.html
+++ b/entry.html
@@ -3,64 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>账户登录/注册</title>
-    <!-- 引入Tailwind CSS -->
+    <title>登录/注册</title>
+    <!-- 引入外部资源 -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- 引入Font Awesome图标 -->
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- 配置Tailwind自定义主题 -->
+    <!-- 简化Tailwind配置 -->
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: {
                         primary: '#3B82F6',
-                        secondary: '#10B981',
-                        neutral: '#F3F4F6'
-                    },
-                    fontFamily: {
-                        inter: ['Inter', 'system-ui', 'sans-serif'],
-                    },
-                },
+                        secondary: '#10B981'
+                    }
+                }
             }
         }
     </script>
 
     <style type="text/tailwindcss">
         @layer utilities {
-            .content-auto {
-                content-visibility: auto;
-            }
-
-            .form-input-focus {
+            .form-focus {
                 @apply focus:border-primary focus:ring-2 focus:ring-primary/20 focus:outline-none;
             }
-
-            .btn-hover {
+            .btn-effect {
                 @apply hover:shadow-lg hover:-translate-y-0.5 transition-all duration-200;
             }
         }
     </style>
 </head>
 
-<body class="font-inter bg-gradient-to-br from-blue-50 to-indigo-50 min-h-screen flex items-center justify-center p-4">
-    <!-- 主容器 -->
+<body class="bg-gradient-to-br from-blue-50 to-indigo-50 min-h-screen flex items-center justify-center p-4">
     <div class="w-full max-w-md">
         <!-- 卡片容器 -->
         <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
             <!-- 标题和切换按钮 -->
             <div class="p-6 border-b">
-                <h1 class="text-[clamp(1.5rem,3vw,2rem)] font-bold text-gray-800 text-center mb-6">账户访问</h1>
-
+                <h1 class="text-[clamp(1.5rem,3vw,2rem)] font-bold text-gray-800 text-center mb-6">登录/注册</h1>
+                
                 <!-- 切换标签 -->
-                <div class="flex rounded-lg overflow-hidden border bg-neutral">
-                    <button id="loginTab" class="flex-1 py-3 px-4 bg-primary text-white font-medium transition-all">
-                        登录
-                    </button>
-                    <button id="registerTab" class="flex-1 py-3 px-4 text-gray-600 font-medium transition-all">
-                        注册
-                    </button>
+                <div class="flex rounded-lg overflow-hidden border bg-gray-100">
+                    <button id="loginTab" class="flex-1 py-3 px-4 bg-primary text-white font-medium">登录</button>
+                    <button id="registerTab" class="flex-1 py-3 px-4 text-gray-600 font-medium">注册</button>
                 </div>
             </div>
 
@@ -68,7 +53,7 @@
             <div class="p-6">
                 <!-- 登录表单 -->
                 <form id="loginForm">
-                    <!-- 用户名/邮箱输入 -->
+                    <!-- 用户名/邮箱 -->
                     <div class="mb-4">
                         <label for="loginUsername" class="block text-sm font-medium text-gray-700 mb-1">用户名/邮箱</label>
                         <div class="relative">
@@ -76,12 +61,12 @@
                                 <i class="fa fa-user"></i>
                             </span>
                             <input type="text" id="loginUsername"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请输入用户名或邮箱" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请输入" required>
                         </div>
                     </div>
 
-                    <!-- 密码输入 -->
+                    <!-- 密码 -->
                     <div class="mb-6">
                         <div class="flex justify-between mb-1">
                             <label for="loginPassword" class="block text-sm font-medium text-gray-700">密码</label>
@@ -92,21 +77,20 @@
                                 <i class="fa fa-lock"></i>
                             </span>
                             <input type="password" id="loginPassword"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请输入密码" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请输入" required>
                         </div>
                     </div>
 
                     <!-- 登录按钮 -->
-                    <button type="button"
-                            class="w-full bg-primary text-white font-medium py-3 px-4 rounded-lg btn-hover">
-                        登录账户
+                    <button type="button" class="w-full bg-primary text-white font-medium py-3 px-4 rounded-lg btn-effect">
+                        登录
                     </button>
                 </form>
 
                 <!-- 注册表单 (默认隐藏) -->
                 <form id="registerForm" class="hidden">
-                    <!-- 用户名输入 -->
+                    <!-- 用户名 -->
                     <div class="mb-4">
                         <label for="regUsername" class="block text-sm font-medium text-gray-700 mb-1">用户名</label>
                         <div class="relative">
@@ -114,12 +98,12 @@
                                 <i class="fa fa-user-plus"></i>
                             </span>
                             <input type="text" id="regUsername"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请设置用户名" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请设置" required>
                         </div>
                     </div>
 
-                    <!-- 邮箱输入 -->
+                    <!-- 邮箱 -->
                     <div class="mb-4">
                         <label for="regEmail" class="block text-sm font-medium text-gray-700 mb-1">邮箱</label>
                         <div class="relative">
@@ -127,12 +111,12 @@
                                 <i class="fa fa-envelope"></i>
                             </span>
                             <input type="email" id="regEmail"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请输入邮箱地址" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请输入" required>
                         </div>
                     </div>
 
-                    <!-- 密码输入 -->
+                    <!-- 密码 -->
                     <div class="mb-4">
                         <label for="regPassword" class="block text-sm font-medium text-gray-700 mb-1">密码</label>
                         <div class="relative">
@@ -140,12 +124,12 @@
                                 <i class="fa fa-lock"></i>
                             </span>
                             <input type="password" id="regPassword"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请设置密码" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请设置" required>
                         </div>
                     </div>
 
-                    <!-- 确认密码输入 -->
+                    <!-- 确认密码 -->
                     <div class="mb-6">
                         <label for="regConfirmPassword" class="block text-sm font-medium text-gray-700 mb-1">确认密码</label>
                         <div class="relative">
@@ -153,75 +137,44 @@
                                 <i class="fa fa-lock"></i>
                             </span>
                             <input type="password" id="regConfirmPassword"
-                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-input-focus"
-                                   placeholder="请再次输入密码" required>
+                                   class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg form-focus"
+                                   placeholder="请再次输入" required>
                         </div>
                     </div>
 
                     <!-- 注册按钮 -->
-                    <button type="button"
-                            class="w-full bg-secondary text-white font-medium py-3 px-4 rounded-lg btn-hover">
-                        创建账户
+                    <button type="button" class="w-full bg-secondary text-white font-medium py-3 px-4 rounded-lg btn-effect">
+                        注册
                     </button>
                 </form>
-
-                <!-- 分隔线 -->
-                <div class="my-6 flex items-center">
-                    <div class="flex-1 h-px bg-gray-300"></div>
-                    <span class="px-4 text-sm text-gray-500">或使用以下方式</span>
-                    <div class="flex-1 h-px bg-gray-300"></div>
-                </div>
-
-                <!-- 社交登录 -->
-                <div class="grid grid-cols-3 gap-3">
-                    <button class="flex items-center justify-center py-2 border border-gray-300 rounded-lg text-gray-600 hover:bg-gray-50 transition-colors">
-                        <i class="fa fa-google text-red-500"></i>
-                    </button>
-                    <button class="flex items-center justify-center py-2 border border-gray-300 rounded-lg text-gray-600 hover:bg-gray-50 transition-colors">
-                        <i class="fa fa-weixin text-green-500"></i>
-                    </button>
-                    <button class="flex items-center justify-center py-2 border border-gray-300 rounded-lg text-gray-600 hover:bg-gray-50 transition-colors">
-                        <i class="fa fa-qq text-blue-500"></i>
-                    </button>
-                </div>
             </div>
         </div>
 
-        <!-- 页脚 -->
-        <p class="text-center text-gray-500 text-sm mt-6">
-            &copy; 2025 轻量级社交媒体 - 前端代码由AI生成
-        </p>
+        <!-- 简化页脚 -->
+        <p class="text-center text-gray-500 text-sm mt-6">© 2025 轻量级社交媒体-前端代码由AI生成</p>
     </div>
 
     <script>
-        // 获取DOM元素
+        // 标签切换逻辑
         const loginTab = document.getElementById('loginTab');
         const registerTab = document.getElementById('registerTab');
         const loginForm = document.getElementById('loginForm');
         const registerForm = document.getElementById('registerForm');
 
-        // 登录标签点击事件
         loginTab.addEventListener('click', () => {
-            // 切换标签样式
             loginTab.classList.add('bg-primary', 'text-white');
             loginTab.classList.remove('text-gray-600');
             registerTab.classList.remove('bg-primary', 'text-white');
             registerTab.classList.add('text-gray-600');
-
-            // 切换表单显示
             loginForm.classList.remove('hidden');
             registerForm.classList.add('hidden');
         });
 
-        // 注册标签点击事件
         registerTab.addEventListener('click', () => {
-            // 切换标签样式
             registerTab.classList.add('bg-primary', 'text-white');
             registerTab.classList.remove('text-gray-600');
             loginTab.classList.remove('bg-primary', 'text-white');
             loginTab.classList.add('text-gray-600');
-
-            // 切换表单显示
             registerForm.classList.remove('hidden');
             loginForm.classList.add('hidden');
         });
