--- a/mainedge.html
+++ b/mainedge.html
@@ -11,13 +11,11 @@
             box-sizing: border-box;
             font-family: 'Arial', sans-serif;
         }
-
         body {
             background-color: #f5f7fa;
             color: #333;
             padding-bottom: 115px;
         }
-
         .header {
             background-color: #fff;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
@@ -28,7 +26,6 @@
             z-index: 100;
             padding: 0 20px;
         }
-
         .header-container {
             max-width: 1200px;
             margin: 0 auto;
@@ -37,14 +34,12 @@
             justify-content: center;
             height: 60px;
         }
-
         .logo {
             font-size: 22px;
             font-weight: bold;
             color: #2d8cf0;
             text-decoration: none;
         }
-
         .publish-btn {
             position: absolute;
             right: 20px;
@@ -56,7 +51,6 @@
             font-size: 14px;
             font-weight: 500;
         }
-
         .user-avatar {
             position: absolute;
             left: 20px;
@@ -66,23 +60,19 @@
             object-fit: cover;
             border: 2px solid transparent;
         }
-
         .main {
             max-width: 1200px;
             margin: 80px auto 0;
             display: flex;
             gap: 20px;
         }
-
         .content {
             flex: 1;
         }
-
         .sidebar {
             width: 280px;
             flex-shrink: 0;
         }
-
         .post-card {
             background-color: #fff;
             border-radius: 12px;
@@ -90,38 +80,32 @@
             margin-bottom: 15px;
             padding: 15px;
         }
-
         .post-header {
             display: flex;
             align-items: center;
             gap: 12px;
             margin-bottom: 12px;
         }
-
         .post-avatar {
             width: 44px;
             height: 44px;
             border-radius: 50%;
             object-fit: cover;
         }
-
         .post-author {
             flex: 1;
         }
-
         .author-name {
             font-weight: 600;
             font-size: 15px;
             color: #333;
         }
-
         .post-content {
             font-size: 14px;
             line-height: 1.6;
             margin-bottom: 15px;
             color: #333;
         }
-
         .post-actions {
             display: flex;
             justify-content: flex-start;
@@ -129,7 +113,6 @@
             padding-top: 10px;
             border-top: 1px solid #f5f5f5;
         }
-
         .action-btn {
             display: flex;
             align-items: center;
@@ -141,15 +124,12 @@
             cursor: pointer;
             transition: all 0.2s;
         }
-
         .action-btn.liked {
             color: #f53f3f;
         }
-
         .action-btn:hover {
             background-color: #f5f5f5;
         }
-
         .sidebar-card {
             background-color: #fff;
             border-radius: 12px;
@@ -157,7 +137,6 @@
             padding: 15px;
             margin-bottom: 15px;
         }
-
         .sidebar-title {
             font-size: 16px;
             font-weight: 600;
@@ -167,15 +146,12 @@
             align-items: center;
             gap: 8px;
         }
-
         .nav-list {
             list-style: none;
         }
-
         .nav-item {
             margin-bottom: 12px;
         }
-
         .nav-link {
             display: flex;
             align-items: center;
@@ -186,16 +162,13 @@
             padding: 8px 10px;
             border-radius: 8px;
         }
-
-            .nav-link.active {
-                color: #2d8cf0;
-                background-color: #f0f7ff;
-            }
-
+        .nav-link.active {
+            color: #2d8cf0;
+            background-color: #f0f7ff;
+        }
         .nav-icon {
             font-size: 18px;
         }
-
         .mobile-nav {
             display: none;
             position: fixed;
@@ -206,7 +179,6 @@
             box-shadow: 0 -2px 8px rgba(0,0,0,0.05);
             height: 55px;
         }
-
         .mobile-nav-list {
             display: flex;
             justify-content: space-around;
@@ -214,7 +186,6 @@
             height: 100%;
             list-style: none;
         }
-
         .mobile-nav-link {
             display: flex;
             flex-direction: column;
@@ -225,15 +196,12 @@
             font-size: 11px;
             gap: 4px;
         }
-
-            .mobile-nav-link.active {
-                color: #2d8cf0;
-            }
-
+        .mobile-nav-link.active {
+            color: #2d8cf0;
+        }
         .mobile-nav-icon {
             font-size: 20px;
         }
-
         .pagination {
             position: fixed;
             bottom: 0;
@@ -247,7 +215,6 @@
             gap: 10px;
             box-shadow: 0 -1px 5px rgba(0,0,0,0.05);
         }
-
         .page-btn {
             width: 30px;
             height: 30px;
@@ -261,18 +228,15 @@
             cursor: pointer;
             transition: all 0.2s;
         }
-
-            .page-btn.active {
-                background-color: #2d8cf0;
-                color: white;
-                border-color: #2d8cf0;
-            }
-
-            .page-btn:hover:not(.active) {
-                border-color: #2d8cf0;
-                color: #2d8cf0;
-            }
-
+        .page-btn.active {
+            background-color: #2d8cf0;
+            color: white;
+            border-color: #2d8cf0;
+        }
+        .page-btn:hover:not(.active) {
+            border-color: #2d8cf0;
+            color: #2d8cf0;
+        }
         .page-prev, .page-next {
             width: 30px;
             height: 30px;
@@ -286,22 +250,18 @@
             cursor: pointer;
             transition: all 0.2s;
         }
-
         .page-prev:hover, .page-next:hover {
             border-color: #2d8cf0;
             color: #2d8cf0;
         }
-
         @media (max-width: 768px) {
             .sidebar {
                 display: none;
             }
-
             .mobile-nav {
                 display: block;
             }
         }
-
         @media (max-width: 480px) {
             .header-container {
                 padding: 0 15px;
@@ -320,11 +280,9 @@
             </button>
         </div>
     </header>
-
     <div class="main">
         <div class="content" id="contentContainer">
         </div>
-
         <div class="sidebar">
             <div class="sidebar-card">
                 <div class="sidebar-title">
@@ -332,19 +290,19 @@
                 </div>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a href="#" class="nav-link active" data-target="discover">
                             <i class="fas fa-compass nav-icon"></i>
                             <span>发现</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="#" class="nav-link" data-target="attention">
                             <i class="fas fa-user-friends nav-icon"></i>
                             <span>关注</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="#" class="nav-link" data-target="mypost">
                             <i class="fas fa-user nav-icon"></i>
                             <span>我的</span>
                         </a>
@@ -353,36 +311,34 @@
             </div>
         </div>
     </div>
-
     <div class="mobile-nav">
         <ul class="mobile-nav-list">
             <li>
-                <a href="#" class="mobile-nav-link active">
+                <a href="#" class="mobile-nav-link active" data-target="discover">
                     <i class="fas fa-compass mobile-nav-icon"></i>
                     <span>发现</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="mobile-nav-link">
+                <a href="#" class="mobile-nav-link" data-target="attention">
                     <i class="fas fa-user-friends mobile-nav-icon"></i>
                     <span>关注</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="mobile-nav-link">
+                <a href="#" class="mobile-nav-link" data-target="publish">
                     <i class="fas fa-plus-circle mobile-nav-icon"></i>
                     <span>发布</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="mobile-nav-link">
+                <a href="#" class="mobile-nav-link" data-target="mypost">
                     <i class="fas fa-user mobile-nav-icon"></i>
                     <span>我的</span>
                 </a>
             </li>
         </ul>
     </div>
-
     <div class="pagination" id="paginationContainer">
         <button class="page-prev" id="prevBtn">
             <i class="fas fa-chevron-left"></i>
@@ -391,29 +347,86 @@
             <i class="fas fa-chevron-right"></i>
         </button>
     </div>
-
     <script>
         let currentPage = 1;
         const maxPageButtons = 5;
-
+        let currentTab = 'discover';
+        let userId = '';
+        const apiUrls = {
+            discover: '/api/find',
+            attention: '/api/attention',
+            mypost: '/api/mypost'
+        };
         document.addEventListener('DOMContentLoaded', () => {
+            getUserId();
             fetchPosts(currentPage);
+            bindNavEvents();
         });
-
+        function getUserId() {
+            const storedUid = localStorage.getItem('uid');
+            if (storedUid) {
+                userId = storedUid;
+                return;
+            }
+            const urlParams = new URLSearchParams(window.location.search);
+            const urlId = urlParams.get('id');
+            if (urlId) {
+                userId = decodeURIComponent(urlId);
+                localStorage.setItem('uid', userId);
+            }
+        }
+        function bindNavEvents() {
+            document.querySelectorAll('.nav-link').forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const target = this.dataset.target;
+                    if (target) {
+                        switchTab(target);
+                    }
+                });
+            });
+            document.querySelectorAll('.mobile-nav-link').forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const target = this.dataset.target;
+                    if (target === 'publish') {
+                        alert('打开发布窗口');
+                        return;
+                    }
+                    if (target) {
+                        switchTab(target);
+                    }
+                });
+            });
+        }
+        function switchTab(target) {
+            currentTab = target;
+            currentPage = 1;
+            document.querySelectorAll('.nav-link, .mobile-nav-link').forEach(link => {
+                link.classList.toggle('active', link.dataset.target === target);
+            });
+            fetchPosts(currentPage);
+        }
         async function fetchPosts(page) {
             try {
-                const response = await fetch('http://192.168.88.101:19200/api/find', {
+                const apiUrl = apiUrls[currentTab];
+                if (!apiUrl) {
+                    throw new Error('未知的导航目标');
+                }
+                let formData = `page=${page}`;
+                if ((currentTab === 'attention' || currentTab === 'mypost') && userId) {
+                    formData += `&id=${userId}`;
+                }
+                const response = await fetch(`http://192.168.88.101:19200${apiUrl}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded',
                     },
-                    body: `page=${page}`
+                    body: formData
                 });
-
                 if (!response.ok) {
                     throw new Error('请求失败');
                 }
-
                 const result = await response.json();
                 renderPosts(result.data);
                 renderPagination(result.totalPages, page);
@@ -430,16 +443,13 @@
                 ]);
             }
         }
-
         function renderPosts(posts) {
             const container = document.getElementById('contentContainer');
             container.innerHTML = '';
-
             if (posts.length === 0) {
                 container.innerHTML = '<div style="text-align:center;padding:20px;">暂无数据</div>';
                 return;
             }
-
             posts.forEach(post => {
                 const postCard = document.createElement('div');
                 postCard.className = 'post-card';
@@ -466,17 +476,14 @@
                 `;
                 container.appendChild(postCard);
             });
-
             bindLikeEvents();
         }
-
         function bindLikeEvents() {
             document.querySelectorAll('.like-btn').forEach(btn => {
                 btn.addEventListener('click', function() {
                     const icon = this.querySelector('i');
                     const text = this.querySelector('span');
                     let likes = parseInt(this.dataset.likes);
-
                     if (icon.classList.contains('far')) {
                         icon.classList.remove('far');
                         icon.classList.add('fas');
@@ -488,21 +495,17 @@
                         this.classList.remove('liked');
                         likes--;
                     }
-
                     this.dataset.likes = likes;
                     text.textContent = `点赞(${likes})`;
                 });
             });
         }
-
         function renderPagination(totalPages, currentPage) {
             const paginationContainer = document.getElementById('paginationContainer');
             const prevBtn = document.getElementById('prevBtn');
             const nextBtn = document.getElementById('nextBtn');
-
             const existingPageBtns = paginationContainer.querySelectorAll('.page-btn');
             existingPageBtns.forEach(btn => btn.remove());
-
             for (let i = 1; i <= Math.min(totalPages, maxPageButtons); i++) {
                 const pageBtn = document.createElement('button');
                 pageBtn.className = `page-btn ${i === currentPage ? 'active' : ''}`;
@@ -513,21 +516,18 @@
                 });
                 paginationContainer.insertBefore(pageBtn, nextBtn);
             }
-
-            prevBtn.addEventListener('click', () => {
+            prevBtn.onclick = () => {
                 if (currentPage > 1) {
                     currentPage--;
                     fetchPosts(currentPage);
                 }
-            });
-
-            nextBtn.addEventListener('click', () => {
+            };
+            nextBtn.onclick = () => {
                 if (currentPage < totalPages) {
                     currentPage++;
                     fetchPosts(currentPage);
                 }
-            });
-
+            };
             prevBtn.disabled = currentPage === 1;
             nextBtn.disabled = currentPage === totalPages;
             prevBtn.style.opacity = currentPage === 1 ? '0.5' : '1';
